Add relative links to recipes

--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/onion_soup.html">Onion Soup</a></li>
+        <li><a href="./recipes/kalbi_bbq.html">Kalbi (Korean BBQ Short Ribs)</a></li>
+    </ul>
 </body>
 </html>
