--- a/recipes/kalbi_bbq.html
+++ b/recipes/kalbi_bbq.html
@@ -1,12 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1>kalbi (Korean BBQ Short Ribs)</h1>
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F4488683.jpg&w=596&h=596&c=sc&poi=face&q=60"
+        alt="Kalbi image">
+
+    <h2>Description</h2>
+    <p>
+        This is the staple of Korean fine dining, but too expensive in the restaurants. It is also simple to make at
+        home, and will leave your guests asking for more. Total time includes marinating time. Traditionally, should be
+        served sliced, rolled in romaine lettuce leaves, along with white rice, lightly browned garlic slices, and
+        gochujang (Korean red pepper paste).
+    </p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>¾ cup soy sauce</li>
+
+        <li>¾ cup brown sugar</li>
+        <li>¾ cup water</li>
+        <li>1 garlic clove, minced</li>
+        <li>2 green onions, chopped</li>
+        <li>1 tablespoon Asian (toasted) sesame oil</li>
+        <li>2 pounds Korean-style short ribs (beef chuck flanken, cut 1/3 to 1/2 inch thick across bones)</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>
+            In a bowl, stir together the soy sauce, brown sugar, water, garlic, green onions, and sesame oil until the
+            sugar has dissolved.
+        </li>
+        <li>
+            Place the ribs in a large plastic zipper bag. Pour the marinade over the ribs, squeeze out all the air, and
+            refrigerate the bag for 3 hours to overnight.
+        </li>
+        <li>
+            Preheat an outdoor grill for medium-high heat, and lightly oil the grate. Remove the ribs from the bag,
+            shake off the excess marinade, and discard the marinade. Grill the ribs on the preheated grill until the
+            meat is still pink but not bloody nearest the bone, 5 to 7 minutes per side.
+        </li>
+    </ol>
+
+    <h2>Nutrition Facts</h2>
+    <p>
+        <b>Per Serving:</b> 1096 calories; protein 35.9g; carbohydrates 44.9g; fat 85.6g; cholesterol 172.4mg; sodium
+        2831.1mg.
+    </p>
 </body>
+
 </html>
