--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,9 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Lasagna</h1>
+    <h1>Miracle Lasagna</h1>
     <img src="../images/lasagna.webp" alt="Lasagna pic">
-    
+
     <h2>Description</h2>
     <p>Traditional, full-flavored lasagna is layered together in just minutes with pasta sauce, noodles, and three cheeses.</p>
 
