--- a/recipes/kalbi_bbq.html
+++ b/recipes/kalbi_bbq.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>kalbi (Korean BBQ Short Ribs)</h1>
+    <h1>Kalbi (Korean BBQ Short Ribs)</h1>
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F4488683.jpg&w=596&h=596&c=sc&poi=face&q=60"
         alt="Kalbi image">
 
