Add link to return to index

--- a/recipes/kalbi_bbq.html
+++ b/recipes/kalbi_bbq.html
@@ -55,6 +55,8 @@
         <b>Per Serving:</b> 1096 calories; protein 35.9g; carbohydrates 44.9g; fat 85.6g; cholesterol 172.4mg; sodium
         2831.1mg.
     </p>
+
+    <a href="../index.html">Return to main page</a>
 </body>
 
 </html>
