--- a/recipes/onion_soup.html
+++ b/recipes/onion_soup.html
@@ -66,6 +66,8 @@
     <p>
         <b>Per Serving:</b> 460 calories; protein 17.3g; carbohydrates 31.7g; fat 29.7g; cholesterol 81.6mg; sodium 1113.9mg.
     </p>
+
+    <a href="../index.html">Return to main page</a>
 </body>
 
 </html>
