--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -30,5 +30,7 @@
 
     <h2>Nutrition Facts</h2>
     <p><b>Per Serving:</b> 366 calories; protein 22g; carbohydrates 31.1g; fat 16.4g; cholesterol 49.9mg; sodium 923.6mg.</p>
+    
+    <a href="../index.html">Return to main page</a>
 </body>
 </html>
