--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <img src="./images/massimo-bottura.jpg" alt="main image">
     <ul>
         <li><a href="./recipes/lasagna.html">Lasagna</a></li>
         <li><a href="./recipes/onion_soup.html">Onion Soup</a></li>
